# discord_activity.aux2

./: Cargo.toml  README.en.md  README.md  about.hbs  aviutl2.toml  translation.aul2
i18n/: English.discord_activity_aux2.aul2
src/: lib.rs  thread.rs
